2008-12-29  Dan Nicolaescu  <dann@ics.uci.edu>

	* subr.el (mkdir): New defalias.

2008-12-29  Juri Linkov  <juri@jurta.org>

	* proced.el (proced-mode-map): Bind " " to next-line instead of the
	command `proced-next-line' removed on 2008-09-06.

2008-12-28  Juri Linkov  <juri@jurta.org>

	* misearch.el (multi-isearch-next-buffer-function): Doc fix.
	(multi-isearch-search-fun): Set the second arg WRAP to nil explicitly.

	* textmodes/reftex-global.el (reftex-isearch-switch-to-next-file):
	Use `find-file-noselect' instead of `find-file' (for Emacs 22 and 23).
	(reftex-isearch-minor-mode): If `multi-isearch-next-buffer-function'
	is bound set it to `reftex-isearch-switch-to-next-file'.  Otherwise,
	set 4 obsolete variables for backward-compatibility with Emacs 22.

2008-12-28  Juri Linkov  <juri@jurta.org>

	* misc.el (butterfly): Doc fix.  Add `animate-string' and `browse-url'.

2008-12-28  Raffael Mancini  <raffael.mancini@hcl-club.lu>  (tiny change)

	* misc.el (butterfly): New command.

2008-12-28  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el (proced-grammar-alist): Allow predicate nil.  New
	attribute tree.
	(proced-format-alist): Use attribute tree.
	(proced-tree-flag, proced-tree-indent): New variables.
	(proced-children-alist): Renamed from proced-process-tree.  PPID
	must refer to a process in process-alist.  Ignore PPIDs that equal
	PID.  Children alist inherits sorting order from process-alist.
	(proced-process-tree): New variable.  New function.
	(proced-process-tree-internal, proced-toggle-tree)
	(proced-tree, proced-tree-insert, proced-format-tree): New
	functions.
	(proced-mark-process-alist): Add docstring.
	(proced-filter-parents): PPID must refer to a process in
	process-alist.  Ignore PPIDs that equal PID.
	(proced-sort): Throw error if attribute is not sortable.
	(proced-sort-interactive): Restrict completion to sortable
	attributes.
	(proced-format): Include tree in standard attributes if